--- a/composer.json
+++ b/composer.json
@@ -1,29 +1,34 @@
 {
-    "name": "popthestack/fitbit",
-    "version": "0.6",
-    "type": "library",
-    "description": "Fitbit library with OAuth. This library is maintained.",
-    "keywords": ["fitbit"],
-    "homepage": "https://github.com/popthestack/fitbitphp",
-    "license" : "Apache-2.0",
+    "name":        "nibynool/fitbitbundle",
+    "type":        "symfony-bundle",
+    "description": "FitBit library with OAuth.",
+    "keywords":    ["fitbit", "symfony"],
+    "homepage":    "https://github.com/nibynool/fitbitbundle",
+    "license" :    "Apache-2.0",
     "authors": [
+	    {
+		    "name":  "Michael Lambert",
+		    "email": "michael@alphageek.com.au"
+	    },
+	    {
+		    "name":     ["Ryan Martinsen","Juni Samos"],
+		    "email":    "ryan@ryanware.com",
+		    "homepage": "http://ryanmartinsen.com"
+	    },
         {
-            "name": ["Ryan Martinsen","Juni Samos"],
-            "email": "ryan@ryanware.com",
-            "homepage": "http://ryanmartinsen.com"
-        },
-        {
-            "name": "Eli White",
+            "name":     "Eli White",
             "homepage": "http://eli-white.com"
         }
     ],
     "require": {
-        "php": ">=5.3.0",
-        "lusitanian/oauth": "~0.2"
+        "php":                      ">=5.3.0",
+	    "symfony/framework-bundle": "~2.1",
+        "lusitanian/oauth":         "~0.2"
     },
     "autoload": {
         "psr-0": {
-            "Fitbit": "lib/"
+            "NibyNool\\FitBit\\FitBitBundle": ""
         }
-    }
+    },
+	"target-dir": "NibyNool/FitBit/FitBitBundle"
 }
