--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,4 +1,8 @@
+parameters:
+    niby_nool_fit_bit.key: ''
+    niby_nool_fit_bit.secret: ''
+    niby_nool_fit_bit.callback: ''
 services:
     fitbit:
         class:     NibyNool\FitBitBundle\FitBit\ApiGatewayFactory
-        arguments: [%fitbit_key%, %fitbit_secret%, %fitbit_callback%]
+        arguments: [%niby_nool_fit_bit.key%, %niby_nool_fit_bit.secret%, %niby_nool_fit_bit.callback%]
