Allow callback URL to be relative to the site's base URL

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -6,4 +6,4 @@ parameters:
 services:
     fitbit:
         class:     NibyNool\FitBitBundle\FitBit\ApiGatewayFactory
-        arguments: [%niby_nool_fit_bit.key%, %niby_nool_fit_bit.secret%, %niby_nool_fit_bit.callback%, %niby_nool_fit_bit.configuration%]
+        arguments: [%niby_nool_fit_bit.key%, %niby_nool_fit_bit.secret%, %niby_nool_fit_bit.callback%, %niby_nool_fit_bit.configuration%, @router]
