--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
     "require": {
         "php":                      ">=5.3.0",
 	    "symfony/framework-bundle": "~2.1",
+	    "symfony/stopwatch":        "",
         "lusitanian/oauth":         "~0.3"
     },
     "autoload": {
